# data-engineer-assignment

./: Dockerfile  README.md  main.py  pyproject.toml  squirrel_census.db
db/: models.py  session.py
src/: queries.py
src copy/: etl.py
